// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be disabled 1`] = `
<FacetBox
  className="it__search-navigator-facet-box it__search-navigator-facet-header"
  clearIconLabel="clear"
  count={0}
  countLabel="x_selected.0"
  disabled={true}
  id="facet_foo"
  loading={false}
  name="facet header"
  onClear={[Function]}
  open={false}
/>
`;

exports[`should display all selected items 1`] = `
<FacetBox
  className="it__search-navigator-facet-box it__search-navigator-facet-header"
  clearIconLabel="clear"
  count={3}
  countLabel="x_selected.3"
  id="facet_foo"
  loading={false}
  name="facet header"
  onClear={[Function]}
  onClick={[Function]}
  open={true}
>
  <span
    className="it__search-navigator-facet-list"
  >
    <InputSearch
      autoFocus={false}
      className="it__search-box-input sw-mb-4 sw-w-full"
      clearIconAriaLabel="clear"
      onChange={[Function]}
      placeholder="search for foo..."
      searchInputAriaLabel="search_verb"
      size="auto"
      value=""
    />
    <FacetItemsList
      labelledby="facet_foo"
    >
      <FacetItem
        active={true}
        className="it__search-navigator-facet"
        key="a"
        name="a"
        onClick={[Function]}
        stat="10"
        tooltip="a"
        value="a"
      />
      <FacetItem
        active={true}
        className="it__search-navigator-facet"
        key="b"
        name="b"
        onClick={[Function]}
        stat="5"
        tooltip="b"
        value="b"
      />
    </FacetItemsList>
    <div
      className="note spacer-bottom text-center"
    >
      ⋯
    </div>
    <FacetItemsList
      labelledby="facet_foo"
    >
      <FacetItem
        active={true}
        className="it__search-navigator-facet"
        key="c"
        name="c"
        onClick={[Function]}
        stat="3"
        tooltip="c"
        value="c"
      />
    </FacetItemsList>
    <ListStyleFacetFooter
      nbShown={3}
      showMore={[Function]}
      total={3}
    />
    <MultipleSelectionHint
      nbSelectableItems={3}
      nbSelectedItems={3}
    />
  </span>
</FacetBox>
`;

exports[`should render 1`] = `
<FacetBox
  className="it__search-navigator-facet-box it__search-navigator-facet-header"
  clearIconLabel="clear"
  count={0}
  countLabel="x_selected.0"
  id="facet_foo"
  loading={false}
  name="facet header"
  onClear={[Function]}
  onClick={[Function]}
  open={true}
>
  <span
    className="it__search-navigator-facet-list"
  >
    <InputSearch
      autoFocus={false}
      className="it__search-box-input sw-mb-4 sw-w-full"
      clearIconAriaLabel="clear"
      onChange={[Function]}
      placeholder="search for foo..."
      searchInputAriaLabel="search_verb"
      size="auto"
      value=""
    />
    <FacetItemsList
      labelledby="facet_foo"
    >
      <FacetItem
        active={false}
        className="it__search-navigator-facet"
        key="a"
        name="a"
        onClick={[Function]}
        stat="10"
        tooltip="a"
        value="a"
      />
      <FacetItem
        active={false}
        className="it__search-navigator-facet"
        key="b"
        name="b"
        onClick={[Function]}
        stat="8"
        tooltip="b"
        value="b"
      />
      <FacetItem
        active={false}
        className="it__search-navigator-facet"
        key="c"
        name="c"
        onClick={[Function]}
        stat="1"
        tooltip="c"
        value="c"
      />
    </FacetItemsList>
    <ListStyleFacetFooter
      nbShown={3}
      showMore={[Function]}
      total={3}
    />
    <MultipleSelectionHint
      nbSelectableItems={3}
      nbSelectedItems={0}
    />
  </span>
</FacetBox>
`;

exports[`should search 1`] = `
<FacetBox
  className="it__search-navigator-facet-box it__search-navigator-facet-header"
  clearIconLabel="clear"
  count={0}
  countLabel="x_selected.0"
  id="facet_foo"
  loading={false}
  name="facet header"
  onClear={[Function]}
  onClick={[Function]}
  open={true}
>
  <span
    className="it__search-navigator-facet-list"
  >
    <InputSearch
      autoFocus={false}
      className="it__search-box-input sw-mb-4 sw-w-full"
      clearIconAriaLabel="clear"
      onChange={[Function]}
      placeholder="search for foo..."
      searchInputAriaLabel="search_verb"
      size="auto"
      value="query"
    />
    <FacetItemsList
      labelledby="facet_foo"
    >
      <FacetItem
        active={false}
        className="it__search-navigator-facet"
        key="d"
        name="d"
        onClick={[Function]}
        stat="7"
        tooltip="d"
        value="d"
      />
      <FacetItem
        active={false}
        className="it__search-navigator-facet"
        key="e"
        name="e"
        onClick={[Function]}
        stat="3"
        tooltip="e"
        value="e"
      />
    </FacetItemsList>
    <ListFooter
      className="sw-mb-2"
      count={2}
      loadMore={[Function]}
      ready={true}
      total={3}
      useMIUIButtons={true}
    />
    <MultipleSelectionHint
      nbSelectableItems={3}
      nbSelectedItems={0}
    />
  </span>
</FacetBox>
`;

exports[`should search 2`] = `
<FacetBox
  className="it__search-navigator-facet-box it__search-navigator-facet-header"
  clearIconLabel="clear"
  count={0}
  countLabel="x_selected.0"
  id="facet_foo"
  loading={false}
  name="facet header"
  onClear={[Function]}
  onClick={[Function]}
  open={true}
>
  <span
    className="it__search-navigator-facet-list"
  >
    <InputSearch
      autoFocus={false}
      className="it__search-box-input sw-mb-4 sw-w-full"
      clearIconAriaLabel="clear"
      onChange={[Function]}
      placeholder="search for foo..."
      searchInputAriaLabel="search_verb"
      size="auto"
      value="query"
    />
    <FacetItemsList
      labelledby="facet_foo"
    >
      <FacetItem
        active={false}
        className="it__search-navigator-facet"
        key="d"
        name="d"
        onClick={[Function]}
        stat="7"
        tooltip="d"
        value="d"
      />
      <FacetItem
        active={false}
        className="it__search-navigator-facet"
        key="e"
        name="e"
        onClick={[Function]}
        stat="3"
        tooltip="e"
        value="e"
      />
      <FacetItem
        active={false}
        className="it__search-navigator-facet"
        key="f"
        name="f"
        onClick={[Function]}
        stat="5"
        tooltip="f"
        value="f"
      />
    </FacetItemsList>
    <ListFooter
      className="sw-mb-2"
      count={3}
      loadMore={[Function]}
      ready={true}
      total={3}
      useMIUIButtons={true}
    />
    <MultipleSelectionHint
      nbSelectableItems={3}
      nbSelectedItems={0}
    />
  </span>
</FacetBox>
`;

exports[`should search 3`] = `
<FacetBox
  className="it__search-navigator-facet-box it__search-navigator-facet-header"
  clearIconLabel="clear"
  count={0}
  countLabel="x_selected.0"
  id="facet_foo"
  loading={false}
  name="facet header"
  onClear={[Function]}
  onClick={[Function]}
  open={true}
>
  <span
    className="it__search-navigator-facet-list"
  >
    <InputSearch
      autoFocus={false}
      className="it__search-box-input sw-mb-4 sw-w-full"
      clearIconAriaLabel="clear"
      onChange={[Function]}
      placeholder="search for foo..."
      searchInputAriaLabel="search_verb"
      size="auto"
      value=""
    />
    <FacetItemsList
      labelledby="facet_foo"
    >
      <FacetItem
        active={false}
        className="it__search-navigator-facet"
        key="a"
        name="a"
        onClick={[Function]}
        stat="10"
        tooltip="a"
        value="a"
      />
      <FacetItem
        active={false}
        className="it__search-navigator-facet"
        key="b"
        name="b"
        onClick={[Function]}
        stat="8"
        tooltip="b"
        value="b"
      />
      <FacetItem
        active={false}
        className="it__search-navigator-facet"
        key="c"
        name="c"
        onClick={[Function]}
        stat="1"
        tooltip="c"
        value="c"
      />
    </FacetItemsList>
    <ListStyleFacetFooter
      nbShown={3}
      showMore={[Function]}
      total={3}
    />
    <MultipleSelectionHint
      nbSelectableItems={3}
      nbSelectedItems={0}
    />
  </span>
</FacetBox>
`;

exports[`should search 4`] = `
<FacetBox
  className="it__search-navigator-facet-box it__search-navigator-facet-header"
  clearIconLabel="clear"
  count={0}
  countLabel="x_selected.0"
  id="facet_foo"
  loading={false}
  name="facet header"
  onClear={[Function]}
  onClick={[Function]}
  open={true}
>
  <span
    className="it__search-navigator-facet-list"
  >
    <InputSearch
      autoFocus={false}
      className="it__search-box-input sw-mb-4 sw-w-full"
      clearIconAriaLabel="clear"
      onChange={[Function]}
      placeholder="search for foo..."
      searchInputAriaLabel="search_verb"
      size="auto"
      value="blabla"
    />
    <div
      className="sw-mb-2"
    >
      no_results
    </div>
    <MultipleSelectionHint
      nbSelectableItems={3}
      nbSelectedItems={0}
    />
  </span>
</FacetBox>
`;

exports[`should search 5`] = `
<FacetBox
  className="it__search-navigator-facet-box it__search-navigator-facet-header"
  clearIconLabel="clear"
  count={0}
  countLabel="x_selected.0"
  id="facet_foo"
  loading={false}
  name="facet header"
  onClear={[Function]}
  onClick={[Function]}
  open={true}
>
  <span
    className="it__search-navigator-facet-list"
  >
    <InputSearch
      autoFocus={false}
      className="it__search-box-input sw-mb-4 sw-w-full"
      clearIconAriaLabel="clear"
      onChange={[Function]}
      placeholder="search for foo..."
      searchInputAriaLabel="search_verb"
      size="auto"
      value="blabla"
    />
    <div
      className="sw-mb-2"
    >
      no_results
    </div>
    <MultipleSelectionHint
      nbSelectableItems={3}
      nbSelectedItems={0}
    />
  </span>
</FacetBox>
`;
